src/assets/scss/regions/_topbar.scss
//@format
.top-bar__wrapper,
.l-header {
    background: $topbar-background;
}

header .top-bar {
    position: relative;
}
header h1 {
    margin: 0;
    //display:none;
    font-size: rem-calc(28);
    margin-right: $global-margin;
    line-height: 2.4;

    //font-family: $pn-thin;
    //font-family: $pn-regular;
    //font-family: $pn-semi-Bold;
    //font-family: $pn-bold;
    //font-family: $pn-black;
    a {
        color: $green;
        .cbu {
            color: $white;
        }
        .scholar {
            color: $orange-new;
        }
    }
}
//front page logo
.logo-wrapper {
    //position: absolute;
    //top: 0;
    //left: $global-margin;
    //z-index: 33;
}
.small-logo {
    width: $logo-width-interior;
}
.large-logo {
    display: none;
}
a.site-logo svg {
    height: auto;
    width: 62px;
}
//front page
.front {
    .large-logo {
        display: none;
    }
    .small-logo {
        width: 5rem;
    }

    @include breakpoint(medium) {
        .large-logo {
            display: block;
            margin-right: $global-margin;
            //width: $logo-width-front;
        }
        .small-logo {
            display: none;
        }
    }

    .top-bar h1 {
        //@include show-for(large);
    }
}
//interior pages

//.top-bar .main-menu,
.top-bar-left {
    @include xy-grid;
}
.top-bar .main-menu {
    @include show-for(large);
}
.top-bar h1 {
    //@include show-for(large);
}
//frontpage
.front {
    //dont show topbar main menu on lp
    .top-bar .main-menu {
        display: none;
    }
}

.top-bar {
    .button-group {
        margin-bottom: 0;
    }
}

//mobile menu
.mobile-menu__button {
    @include hamburger(#ccc, green, 30px, 30px, 3px, 4);
    transition: all 0.4s;
    float: right;
    margin: rem-calc(6) 0;
    @include breakpoint(large) {
        display: none;
    }
}

